--- a/p2p-learn-rust/Cargo.toml
+++ b/p2p-learn-rust/Cargo.toml
@@ -3,6 +3,9 @@ name = "p2p-learn-rust"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "iter1"
+
 [dependencies]
 libp2p = "0.42.2"
 tokio = { version = "1.6.1", features = ["full"] }
